<resources>
    <string name="app_name">AntiCovid</string>
    activity besoin
    <string name="ou">Ou</string>
    <string name="choisieAide">Choisissez le type d\'assistance et vous serez contacté</string>
    <string name="appel">Appeler 190</string>
    <string name="aide1">J"ai des symptomes</string>
    <string name="aide2">Changer le site d\'isolement sanitaire</string>
    <string name="aide3">Changer le numéro de mobile ou l"appareil utilisé</string>
    <string name="aide4">Autre aide</string>
    <string name="typeAide">Veuillez expliquer le type d"assistance</string>
    <string name="button_envoyer_aide">Envoyer de l"aide</string>
    activity dashboard
    <string name="appname">Navigation Drawer</string>
    <string name="settings">Paramètres</string>
    <string name="signout">Déconnexion</string>
    <string name="accueil">Accueil</string>
    <string name="imp">Importer</string>
    <string name="navigation_drawer">Tableau de bord</string>
    <string name="nav_header_desc">Mon profil</string>
    <string name="nav_header_title">Ameni Ben Rbiha</string>
    <string name="nav_header_subtitle">AntiCovid</string>
    activity register
    <string name="inscription">Inscription</string>
    <string name="nom_utilisateur">Nom Utilisateur</string>
    <string name="pass">Mot de passe</string>Confirmer le mot de passe
    <string name="confirm_pass">Confirmer le mot de passe</string>
    <string name="compte_exist">Vous avez un compte!</string>
    activity advice
    <string name="utiliser_le_masque_medical">Utiliser le masque medical</string>
    <string name="utiliser_le_gel_hydroalcoolique">Utiliser le gel hydroalcoolique</string>
    <string name="restez_la_maison">Restez à la maison</string>
    <string name="respectez_la_distanciation_sociale">Respectez la distanciation sociale</string>
    <string name="lavez_vos_mains">Lavez vos mains</string>
    <string name="conseils">Conseils</string>
    <string name="facebook_app_id">399799611328903</string>
    <string name="fb_login_protocol_scheme">fb399799611328903</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email">Email</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié</string>
    <string name="connexion">Connexion</string>
    <string name="vous_n_avez_pas_un_compte">Vous n\'avez pas un compte!</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">Facebook</string>


</resources>