<?xml version="1.1" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb">


    <TextView
        android:id="@+id/textView"
        android:layout_width="138dp"
        android:layout_height="52dp"
        android:background="@color/teal_200"
        android:text="@string/respectez_la_distanciation_sociale"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="673dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="138dp"
        android:layout_height="52dp"
        android:background="@color/teal_200"
        android:text="@string/restez_la_maison"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="458dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:background="@color/teal_200"
        android:text="@string/lavez_vos_mains"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="670dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="142dp"
        android:layout_height="61dp"
        android:background="@color/teal_200"
        android:text="@string/utiliser_le_gel_hydroalcoolique"
        tools:layout_editor_absoluteX="213dp"
        tools:layout_editor_absoluteY="256dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="416dp"
        android:layout_height="100dp"
        android:background="@color/teal_200"
        android:text="@string/conseils"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="-3dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="142dp"
        android:layout_height="143dp"
        app:srcCompat="@drawable/_5244822__2_"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="114dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="142dp"
        android:layout_height="63dp"
        android:background="@color/teal_200"
        android:text="@string/utiliser_le_masque_medical"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="254dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="151dp"
        android:layout_height="145dp"
        app:srcCompat="@drawable/_5244822__3_"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="114dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="146dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/_5244822__4_"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="523dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="139dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/_5244822__5_"
        tools:layout_editor_absoluteX="221dp"
        tools:layout_editor_absoluteY="523dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/_5244822__6_"
        tools:layout_editor_absoluteX="122dp"
        tools:layout_editor_absoluteY="317dp" />
</androidx.constraintlayout.widget.ConstraintLayout>




