<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bb">

    <TextView
        android:id="@+id/logo"
        android:layout_width="203dp"
        android:layout_height="67dp"
        android:layout_marginTop="88dp"
        android:text="@string/connexion"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputPasssword"
        android:layout_width="314dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="314dp"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/inputPasssword"
        app:layout_constraintStart_toStartOf="@+id/inputPasssword"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/ForgotMPasse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe_oubli"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/inputPasssword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inputPasssword"
        app:layout_constraintTop_toBottomOf="@+id/inputPasssword" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        android:text="@string/connexion"
        android:textColor="@color/purple_700"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@+id/inputPasssword"
        app:layout_constraintStart_toStartOf="@+id/inputPasssword"
        app:layout_constraintTop_toBottomOf="@+id/ForgotMPasse" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btnlogin"
        app:layout_constraintStart_toStartOf="@+id/btnlogin"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vous_n_avez_pas_un_compte"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_inscrire"
            android:textColor="@color/colorRed" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="136dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/btn_bg"
        android:drawableStart="@drawable/ic_google"
        android:text="@string/google"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.195" />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="138dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_bg"
        android:clickable="true"
        android:drawableStart="@drawable/ic_facebook"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        app:backgroundTint="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/btnGoogle"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.199"
        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>