<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="203dp"
        android:layout_height="67dp"
        android:layout_marginTop="84dp"
        android:text="@string/inscription"
        android:textColor="@color/colorWhite"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputPasssword"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="20sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:paddingBottom="10dp"
        android:text="@string/nom_utilisateur"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="0dp"
        android:layout_height="46sp"
        android:layout_marginTop="40sp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingStart="20sp"
        android:paddingTop="10sp"
        android:paddingEnd="10sp"
        android:paddingBottom="10sp"
        android:text="@string/email"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/inputPasssword"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="@+id/inputPasssword"
        app:layout_constraintTop_toBottomOf="@+id/inputPasssword" />

    <EditText
        android:id="@+id/inputpassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/pass"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:text="@string/confirm_pass"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/inputpassword"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/inputpassword"
        app:layout_constraintTop_toTopOf="@+id/inputpassword" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bg"
        android:text="@string/inscription"
        android:textColor="@color/purple_700"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/inputConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

    <TextView
        android:id="@+id/AlreadyhaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/compte_exist"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnregister"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnregister" />
</androidx.constraintlayout.widget.ConstraintLayout>